--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,9 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2015",
+    "typeRoots": [
+      "alertifytype.d.ts"
+    ],
     "lib": [
       "es2018",
       "dom"
